# piano-tuner

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  SimpleTuner.jucer
.github/workflows/: ci.yml
cmake/: clang-format.cmake  clang-tidy.cmake  complexity.cmake  cppcheck.cmake  sloccount.cmake
docs/: IMPLEMENTATION_PLAN.md  TEST_DEVICE_LIST.md
docs/requirements/: SOFTWARE_REQUIREMENTS_SPECIFICATION.md  TEST_PLAN.md  USE_CASE_DOCUMENTATION.md  VISION_AND_SCOPE_DOCUMENT.md
include/simple_tuner/algorithms/: FrequencyCalculator.h  PitchDetector.h  ToneGenerator.h
include/simple_tuner/config/: ConfigManager.h
include/simple_tuner/controllers/: PitchDetectionController.h
include/simple_tuner/interfaces/: IAudioInput.h  IAudioOutput.h  IConfigStorage.h  IPermissions.h
include/simple_tuner/platform/desktop/: MockAudioInput.h  MockAudioOutput.h  MockConfigStorage.h  MockPermissions.h
include/simple_tuner/ui/: MainComponent.h  StatusIndicatorComponent.h
src/: CMakeLists.txt  Main.cpp
src/controllers/: PitchDetectionController.cpp
src/platform/desktop/: MockAudioInput.cpp  MockAudioOutput.cpp  MockConfigStorage.cpp  MockPermissions.cpp
src/platform/mobile/: AudioManager.cpp
src/shared/algorithms/: FrequencyCalculator.cpp  PitchDetector.cpp  ToneGenerator.cpp
src/shared/config/: ConfigManager.cpp
src/ui/: MainComponent.cpp  NoteDisplayComponent.cpp  StatusIndicatorComponent.cpp  TuningMeterComponent.cpp
tests/: CMakeLists.txt  test_frequency_calculator.cpp  test_pitch_detector.cpp
tests/unit/: test_config_manager.cpp
